--- a/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
+++ b/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
@@ -1,31 +1,82 @@
 .friendMessage {
-
+    display: flex;
+    flex-direction: column;
+    max-width: 527px;
+    margin-bottom: 30px;
 }
 
 .friendImageAndText {
-
+    display: flex;
+    flex-direction: row;
+    height: min-content;
 }
 
 .friendImageAndText img {
-
+    max-height: 48px;
+    width: 100%;
+    max-width: 48px;
 }
 
 .friendText {
-
+    position: relative;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    background: #F5F7FB;
+    box-shadow: 0px 5px 20px rgba(29, 33, 38, 0.03), 0px 1px 1px rgba(29, 33, 38, 0.1);
+    border-radius: 10px;
+    text-wrap: normal;
+    max-width: 527px;
+    padding-top: 7px;
+    padding-bottom: 8px;
+    padding-left: 13px;
+    padding-right: 25px;
+    color: #000000;
+    margin-left: 15px;
 }
 
 .friendText:after {
-
+    content: '';
+    position: absolute;
+    border-left: 20px solid transparent;
+    border-right: 10px solid transparent;
+    border-bottom: 15px solid  #F5F7FB;
+    box-shadow: 0px 1px 0px rgba(29, 33, 38, 0.03);
+    left: -12px;
+    bottom: 0px;
 }
 
 .friendName {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 22px;
+}
 
+pre {
+    white-space: pre-wrap; /* css-3 */
+    white-space: -moz-pre-wrap; /* Mozilla, с 1999 года*/
+    white-space: -pre-wrap; /* Opera 4-6 */
+    white-space: -o-pre-wrap; /* Opera 7 */
+    word-wrap: break-word; /* Internet Explorer 5.5+ */
 }
 
 .friendMessageText {
-
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
 }
 
 .friendTime {
-
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 10px;
+    line-height: 12px;
+    margin-left: 11px;
 }
