--- a/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
+++ b/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
@@ -1,18 +1,49 @@
 .sendForm {
-
+    display: flex;
+    flex-direction: row;
+    margin-top: 26px;
 }
 
 .textarea {
+    width: 100%;
+    min-height: 40px;
+    background: #F5F7FB;
+    box-shadow: 0px 5px 20px rgba(29, 33, 38, 0.03), 0px 1px 2px rgba(29, 33, 38, 0.1);
+    border-radius: 20px;
+    outline: none;
+    border: none;
+    resize: none;
+    padding-top: 12px;
+    padding-bottom: 11px;
+    padding-left: 24px;
+    padding-right: 24px;
+    margin-right: 44px;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
 
 }
 
 .button {
-
+    background: #0066CC;
+    border-radius: 20px;
+    width: 120px;
+    height: 40px;
+    border: none;
+    color: #FFFFFF;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 20px;
 }
 
 .button:hover {
 
 }
+
 .button:active {
 
 }
