--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,10 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+html {
+    overflow-x: hidden;
+    margin-right: calc(-1 * (100vw - 100%));
+}
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
