--- a/src/s1-main/App.module.css
+++ b/src/s1-main/App.module.css
@@ -5,6 +5,9 @@
     margin: 0 auto;
     padding-left: 40px;
     padding-right: 40px;
+    position: relative;
+    width:100vw;
+    height: 100vh;
 }
 .messageWrap{
     display: flex;
