--- a/src/s2-homeworks/hw05/header/Header.module.css
+++ b/src/s2-homeworks/hw05/header/Header.module.css
@@ -1,7 +1,20 @@
 .burgerMenuIcon {
+    cursor: pointer;
+    width: 24px;
+    height: 24px;
 }
 
 .header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 70px;
+    padding-right: 70px;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 40px rgba(29, 33, 38, 0.13), 0px 0px 2px rgba(29, 33, 38, 0.1);
+    width: 100%;
+    height: 60px;
 }
 
 .header h1 {
